test/conformance/chainsaw/generating-policies/webhook/skip-background-requests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gpol-skip-background-ns
