test/conformance/chainsaw/generating-policies/webhook/skip-background-requests/permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: gpol-skip-background-requests
subjects:
  - kind: User
    name: system:serviceaccount:kyverno:kyverno-background-controller
    apiGroup: rbac.authorization.k8s.io
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
