test/conformance/chainsaw/generating-policies/webhook/skip-background-requests/policy-default.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: gpol-skip-background-default
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["UPDATE"]
      resources: ["namespaces"]
      resourceNames: ["gpol-skip-background-ns"]
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: generated
      expression: >-
        [
          {
            "kind": dyn("ConfigMap"),
            "apiVersion": dyn("v1"),
            "metadata": dyn({
              "name": "generated-default",
              "namespace": string(variables.nsName),
            }),
            "data": dyn({
              "source": "default-skip"
            })
          }
        ]
  generate:
  - expression: generator.apply(variables.nsName, variables.generated)
