test/conformance/chainsaw/generating-policies/webhook/skip-background-requests/configmap-optin-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: generated-optin
  namespace: gpol-skip-background-ns
data:
  source: opt-in
